--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="front-text">
           <h3 class="happy">Hadiah</h3>
           <h2 class="bday">Buat</h2>
-          <h3 class="toyou">Chiizu</h3>
+          <h3 class="toyou">Test Proyek</h3>
         </div>
         <div class="wrap-deco">
           <div class="decorations"></div>
@@ -33,10 +33,10 @@
         <div class="inside-text">
           <h3 class="happy">Hadiah</h3>
           <h2 class="bday">Buat</h2>
-          <h3 class="toyou">Suci</h3>
+          <h3 class="toyou">Test</h3>
         </div>
         <div class="wishes">
-          <p>Dear Icuss,</p>
+          <p>Dear Anyone,</p>
           <p>Semoga tetap sehat selalu yak!! Jangan takut pasti semuanya ada jalan dan jangan ragu untuk membagi beban yang ada. You are not Alone</p>
           <div class="button">
             <button>
